<resources>
    <string name="app_name">SQLiteTest</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="username">用户名</string>
    <string name="username_colon">用户名：</string>
    <string name="password">密码</string>
    <string name="password_colon">密&#160;&#160;&#160;&#160;码：</string>
    <string name="insert">新增</string>
    <string name="delete">删除</string>
    <string name="update">修改</string>
    <string name="can_not_be_empty">用户名、密码信息不能为空</string>
</resources>
